// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compute legacy line diff multiline-1 1`] = `
[
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
  },
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 5,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 5,
    },
  },
]
`;

exports[`compute legacy line diff multiline-2 1`] = `
[
  LineRangeMapping {
    "innerChanges": undefined,
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 1,
      "startLineNumber": 1,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
  },
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 2,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 3,
    },
  },
]
`;

exports[`compute legacy line diff singleline-1 1`] = `
[
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
  },
]
`;

exports[`compute line diff multiline-1 1`] = `
[
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
  },
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 5,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 5,
    },
  },
]
`;

exports[`compute line diff multiline-2 1`] = `
[
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 1,
      "startLineNumber": 1,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
  },
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 2,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 6,
      "startLineNumber": 3,
    },
  },
]
`;

exports[`compute line diff singleline-1 1`] = `
[
  LineRangeMapping {
    "innerChanges": [
      RangeMapping {
        "modifiedRange": [Circular],
        "originalRange": [Circular],
      },
    ],
    "modifiedRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
    "originalRange": LineRange {
      "endLineNumberExclusive": 2,
      "startLineNumber": 1,
    },
  },
]
`;

exports[`computeDiff multiline-1 1`] = `
[
  LineChange {
    "charChanges": [
      CharChange {
        "modifiedEndColumn": 12,
        "modifiedEndLineNumber": 1,
        "modifiedStartColumn": 11,
        "modifiedStartLineNumber": 1,
        "originalEndColumn": 12,
        "originalEndLineNumber": 1,
        "originalStartColumn": 11,
        "originalStartLineNumber": 1,
      },
    ],
    "modifiedEndLineNumber": 1,
    "modifiedStartLineNumber": 1,
    "originalEndLineNumber": 1,
    "originalStartLineNumber": 1,
  },
  LineChange {
    "charChanges": [
      CharChange {
        "modifiedEndColumn": 18,
        "modifiedEndLineNumber": 5,
        "modifiedStartColumn": 11,
        "modifiedStartLineNumber": 5,
        "originalEndColumn": 15,
        "originalEndLineNumber": 5,
        "originalStartColumn": 11,
        "originalStartLineNumber": 5,
      },
    ],
    "modifiedEndLineNumber": 5,
    "modifiedStartLineNumber": 5,
    "originalEndLineNumber": 5,
    "originalStartLineNumber": 5,
  },
]
`;

exports[`computeDiff multiline-2 1`] = `
[
  LineChange {
    "charChanges": undefined,
    "modifiedEndLineNumber": 0,
    "modifiedStartLineNumber": 0,
    "originalEndLineNumber": 1,
    "originalStartLineNumber": 1,
  },
  LineChange {
    "charChanges": [
      CharChange {
        "modifiedEndColumn": 5,
        "modifiedEndLineNumber": 3,
        "modifiedStartColumn": 4,
        "modifiedStartLineNumber": 2,
        "originalEndColumn": 5,
        "originalEndLineNumber": 3,
        "originalStartColumn": 4,
        "originalStartLineNumber": 3,
      },
      CharChange {
        "modifiedEndColumn": 34,
        "modifiedEndLineNumber": 5,
        "modifiedStartColumn": 15,
        "modifiedStartLineNumber": 4,
        "originalEndColumn": 15,
        "originalEndLineNumber": 5,
        "originalStartColumn": 15,
        "originalStartLineNumber": 5,
      },
    ],
    "modifiedEndLineNumber": 5,
    "modifiedStartLineNumber": 2,
    "originalEndLineNumber": 5,
    "originalStartLineNumber": 3,
  },
]
`;

exports[`computeDiff singleline-1 1`] = `
[
  LineChange {
    "charChanges": [
      CharChange {
        "modifiedEndColumn": 7,
        "modifiedEndLineNumber": 1,
        "modifiedStartColumn": 3,
        "modifiedStartLineNumber": 1,
        "originalEndColumn": 8,
        "originalEndLineNumber": 1,
        "originalStartColumn": 3,
        "originalStartLineNumber": 1,
      },
      CharChange {
        "modifiedEndColumn": 14,
        "modifiedEndLineNumber": 1,
        "modifiedStartColumn": 10,
        "modifiedStartLineNumber": 1,
        "originalEndColumn": 12,
        "originalEndLineNumber": 1,
        "originalStartColumn": 11,
        "originalStartLineNumber": 1,
      },
    ],
    "modifiedEndLineNumber": 1,
    "modifiedStartLineNumber": 1,
    "originalEndLineNumber": 1,
    "originalStartLineNumber": 1,
  },
]
`;
